# BallDropperROS

./: .gitignore
balldropper_ws/: balldropper.launch
balldropper_ws/src/ball_dropper/: CMakeLists.txt  package.xml
balldropper_ws/src/ball_dropper/msg/: Configuration.msg  Heartbeat.msg  String.msg
balldropper_ws/src/ball_dropper/src/: Serial.hpp  ball_dropper.cpp  rdt.cpp  rdt.hpp
balldropper_ws/src/ball_dropper/srv/: Configure.srv  GetConfiguration.srv  GetErrorString.srv  Operation.srv
balldropper_ws/src/ball_dropper_gui/: CMakeLists.txt  package.xml
balldropper_ws/src/ball_dropper_gui/launch/: balldroppersim.launch
balldropper_ws/src/ball_dropper_gui/src/: ball_dropper_gui.py  ball_dropper_sim.cpp
balldropper_ws/src/ball_dropper_msgs/: CMakeLists.txt  package.xml
balldropper_ws/src/ball_dropper_msgs/msg/: Heartbeat.msg  server.py
balldropper_ws/src/heartbeat_analyzer/: CMakeLists.txt  package.xml
balldropper_ws/src/heartbeat_analyzer/src/: main.cpp  random_vector_analysis.hpp
