<?xml version="1.0"?>
<package>
  <name>ball_dropper_gui</name>
  <version>1.0.0</version>
  <description>The ball_dropper_gui package</description>

  <maintainer email="christian.m.laney@gmail.com">Christian Laney</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ball_dropper_msgs</build_depend>
  <build_depend>ball_dropper</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ball_dropper</run_depend>

  <export>

  </export>
</package>